# MLOps_sandbox

./: .gitignore  README.md  main.py  pyproject.toml
src/api/: api.py
src/train/: train.ipynb  train.py
src/train/mlflow_testv2/: MLmodel  conda.yaml  python_env.yaml
