[project]
name = "mlops-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagshub>=0.5.6",
    "fastapi>=0.115.8",
    "mlflow>=2.20.2",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.34.0",
]

[tool.flake8]
max-line-length = 120
max-complexity = 18

[tool.mypy]
python_version = "3.9"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
